# energy-transformer

./: .codecov.yml  .gitignore  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  TESTING.md  __init__.py  manifest.scm  pyproject.toml  requirements.txt  setup-dev.sh  verify_cache_keys.py  verify_cache_restoration.py  verify_graph_fix.py  verify_recursion_fix.py  verify_security.py  verify_types.py  verify_validation_order.py
.github/workflows/: ci.yml  docs.yml  mutation.yml  performance.yml  python.yml
docs/: PR2_MIGRATION.md  changelog.rst  concepts.rst  conf.py  examples.rst  index.rst  installation.rst  mutation-testing.md  quickstart.rst  requirements.txt  spec_realisation.md
docs/_static/: custom.css
docs/_templates/autosummary/: class.rst  module.rst
docs/api/: energy_transformer.layers.rst  energy_transformer.models.rst  energy_transformer.models.vision.rst  energy_transformer.rst  modules.rst
docs/tutorials/: index.rst
energy_transformer/: __init__.py  config.py
energy_transformer/functional/: __init__.py  energy.py
energy_transformer/layers/: __init__.py  attention.py  base.py  constants.py  embeddings.py  heads.py  hopfield.py  layer_norm.py  mlp.py  simplicial.py  tokens.py  types.py  validation.py
energy_transformer/models/: __init__.py  base.py  configs.py  core.py  image.py  vision.py
energy_transformer/models/vision/: __init__.py  utils.py  viet.py  viset.py  vit.py
energy_transformer/spec/: __init__.py  __init__.pyi  combinators.py  debug.py  library.py  metrics.py  primitives.py  realise.py
energy_transformer/testing/: __init__.py  utils.py
energy_transformer/utils/: __init__.py  checkpoint.py  image.py  observers.py  optimizers.py  vision.py
examples/: __init__.py  monitoring.py
examples/cifar/: README.md  ablation.py  demo.py  infer.py  quick.py  train.py  visualize.py
scripts/: run_mutation_tests.py
tests/: README.md  __init__.py  conftest.py  test_compatibility.py  test_functional.py  test_graph_and_validation.py  test_integration.py  test_layers.py  test_models.py  test_parity.py  test_positional_embedding.py  test_realisation.py  test_realisation_performance.py  test_security_and_types.py  test_utils.py  test_viset_fixes.py
tests/functional/: test_auto_import.py  test_import_behavior.py
tests/integration/: test_all_models_equivalence.py  test_all_specs_equivalence.py  test_cache_keys.py  test_graph_execution.py  test_graph_patterns.py  test_model_building.py  test_spec_composition_patterns.py  test_spec_edge_cases.py  test_spec_model_equivalence.py  test_spec_to_model.py  test_validation_integration.py
tests/performance/: compare_models.py  conftest.py  memory_utils.py  profile_memory.py  test_cache_performance.py  test_component_speed.py  test_inference_latency.py  test_memory_usage.py  test_model_inference.py  test_spec_performance.py
tests/regression/: test_cache_restoration.py  test_error_context.py  test_recursion_fixes.py  test_validation_order.py
tests/security/: test_eval_prevention.py  test_type_safety.py
tests/unit/: __init__.py
tests/unit/layers/: __init__.py  test_attention.py  test_attention_extra.py  test_base.py  test_embeddings.py  test_heads.py  test_hopfield.py  test_init.py  test_layer_norm.py  test_mlp.py  test_simplicial.py  test_validation_utils.py
tests/unit/models/: test_base.py  test_energy_transformer.py  test_init.py  test_viet.py  test_vision_utils.py
tests/unit/models/vision/: test_package_init.py  test_viet.py  test_viset.py  test_vit.py
tests/unit/spec/: __init__.py  test_api_extra.py  test_auto_import.py  test_cache.py  test_combinators.py  test_configuration.py  test_debug.py  test_debug_tracer.py  test_library.py  test_metrics.py  test_primitives.py  test_primitives_extra.py  test_primitives_validation.py  test_realise.py  test_realise_extra.py  test_realise_security.py  test_thread_safety.py
tests/unit/testing/: test_utils.py
tests/unit/utils/: test_observers.py  test_observers_extra.py  test_optimizers.py
