[tool.poetry]
name = "energy-transformer"
version = "0.1.0"
description = "PyTorch implementation of Energy Transformer"
authors = ["Ayan Das <bvits@riseup.net>"]
maintainers = [
    "Ayan Das <bvits@riseup.net>",
    "Claude Opus 4 (Anthropic)",
    "Claude Sonnet 4 (Anthropic)",
    "Claude Sonnet 3.7 (Anthropic)",
    "ChatGPT o3 (OpenAI)",
    "ChatGPT Codex (OpenAI)"
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/b-vitamins/energy-transformer"
keywords = ["deep-learning", "transformers", "energy-based-models", "hopfield-networks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.7.0"
einops = "0.8.1"
numpy = "1.26.2"
scipy = "1.12.0"
tensorboard = "2.18.0"
wandb = "0.18.2"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-cov = "6.0.0"
pytest-xdist = "3.6.1"
mypy = "1.13.0"
ruff = "0.9.3"
types-PyYAML = "6.0.12.20240311"
PyYAML = "6.0.1"
mutmut = "3.3.0"
pytest-benchmark = "4.0.0"
memory-profiler = "0.61.0"
psutil = "5.9.0"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
torchvision = "0.22.0"
matplotlib = "3.8.2"
pillow = "11.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "8.1.3"
sphinx-autodoc-typehints = "1.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
target-version = "py311"
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
    ".git",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "*.egg-info",
]


[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "N",
    "D",
    "C90",
    "W",
    "ANN",
    "S",
    "BLE",
    "A",
    "C4",
    "DTZ",
    "ISC",
    "ICN",
    "G",
    "PIE",
    "PT",
    "RET",
    "TRY",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "RUF",
]
ignore = [
    "E203",
    "E501",
    "D100",
    "D104",
    "N999",
    "S101",
    "PLR0913",
    "TRY003",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "ANN", "S101", "PLR2004", "PLR0915", "RUF009"]
"examples/*.py" = ["D", "ANN", "T201"]
"benchmarks/*.py" = ["D", "ANN"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.lint.flake8-import-conventions.aliases]
"numpy" = "np"
"pandas" = "pd"
"seaborn" = "sns"
"matplotlib.pyplot" = "plt"
"torch.nn.functional" = "F"

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = false
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = ["torch", "torch.*", "torchvision", "torchvision.*", "scipy", "scipy.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["energy_transformer.*"]
strict = true
ignore_errors = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["tests.*", "examples.*"]
ignore_errors = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -v --tb=short
    --strict-markers
    --strict-config
    --cov-fail-under=90
    --cov-branch
    --cov-report=html
    --cov-report=term-missing:skip-covered
"""
markers = [
    # Test speed markers
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: marks tests that run in under 100ms",
    
    # Test type markers
    "unit: isolated unit tests",
    "integration: tests requiring multiple components",
    "functional: end-to-end functional tests",
    "performance: performance benchmark tests",
    "benchmark: performance benchmark tests",

    # Performance-specific markers
    "inference_bench: inference speed benchmarks",
    "memory_bench: memory usage benchmarks",
    "component_bench: component-level benchmarks",
    "training_bench: training performance benchmarks",
    "security: security-related tests",
    "regression: regression tests for specific bugs",
    
    # Environment markers
    "gpu: requires GPU/CUDA",
    "network: requires network access",
    "heavy: requires significant resources",
    
    # Priority markers
    "smoke: critical tests for smoke testing",
    "nightly: tests for nightly builds only"
]

[tool.pytest.benchmark]
disable_gc = true
min_rounds = 5
min_time = 0.000005
max_time = 1.0
calibration_precision = 10
warmup = true
warmup_iterations = 100000
[tool.coverage.run]
source = ["energy_transformer"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]
[tool.mutmut]
paths_to_mutate = "energy_transformer/"
backup = false
runner = "python -m pytest -x -q --tb=no"
tests_dir = "tests/"
dict_synonyms = "Struct,NamedStruct"
cache_only = false
simple_number_mutations = true
no_backup = true
